Programmer humour is completed

--- a/challenges/programmer-humour/humour.html
+++ b/challenges/programmer-humour/humour.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="humour.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-      <img class="random-dog-images"></img>
-      <button class="random" type="button">Random Dogs Photos</button>
+    <div class="humour-container">
+        <img class="humourous-image">
     </div>
     
-    <script src="challenge.js"></script>
+    <script src="humour.js"></script>
 </body>
 </html>
